# spores

./: AGENTS.md  Cargo.toml  README.md  spores.skill
skills/spores/: SKILL.md
src/: main.rs
